# eos-canonical-signatures-in-enclave

./: .gitignore  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: enclave_api.rs  get_enclave.rs  main.rs
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs
