[package]
name = "app"
version = "1.0.0"
authors = ["Greg Kapka"]
build = "build.rs"

[dependencies]
dirs = "1.0.2"
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git" }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }

[patch.'https://github.com/baidu/rust-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
